--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-# Binaries
+**/File_IO/
 **/Binaries/
-Binaries-Intermediate/
-
-# Visual Studio files and folder
-.vs/
-**.sln
-**.vcxproj
-**.vcxproj.filters
-**.vcxproj.user
+**/Assembly/
